--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,6 @@
   <name>BGP4J</name>
   <description>BGP4 Java implementation</description>
 
-  <scm>
-    <connection>scm:git:https://rbieniek@github.com/rbieniek/BGP4J.git</connection>
-  </scm>
 
   <developers>  
     <developer>
@@ -77,14 +74,6 @@
       <snapshots>
 	<enabled>false</enabled>
       </snapshots>
-    </repository>  
-    <repository>
-      <id>snmp4j-repository</id>
-      <name>SNMP4J maven repository</name>
-      <url>https://server.oosnmp.net/dist/release/</url>
-      <snapshots>
-	<enabled>false</enabled>
-      </snapshots>
     </repository>
   </repositories>
   
@@ -97,11 +86,12 @@
     	  <artifactId>maven-jar-plugin</artifactId>
     	  <version>${version.org.apache.maven.plugins.maven_jar_plugin}</version>
     	</plugin>
-    	<plugin>
+    	<!-- <plugin>
     	  <groupId>org.apache.maven.plugins</groupId>
     	  <artifactId>maven-surefire-plugin</artifactId>
     	  <version>${version.org.apache.maven.plugins.maven_surefire_plugin}</version>
     	</plugin>
+    	-->
     	<plugin>
     	  <groupId>org.apache.felix</groupId>
     	  <artifactId>maven-bundle-plugin</artifactId>
@@ -143,7 +133,7 @@
     <version.javax.enterprise.cdi-api>1.1.EDR1.2</version.javax.enterprise.cdi-api>
     <version.log4j>1.2.16</version.log4j>
     <version.org.apache.maven.plugins.maven_jar_plugin>2.4</version.org.apache.maven.plugins.maven_jar_plugin>
-    <version.org.apache.maven.plugins.maven_surefire_plugin>2.13</version.org.apache.maven.plugins.maven_surefire_plugin>
+    <!-- <version.org.apache.maven.plugins.maven_surefire_plugin>2.13</version.org.apache.maven.plugins.maven_surefire_plugin> -->
     <version.org.codehaus.mojo.appassembler_maven_plugin>1.0</version.org.codehaus.mojo.appassembler_maven_plugin>
     <version.org.apache.felix.bundle_maven_plugin>2.5.3</version.org.apache.felix.bundle_maven_plugin>
     <version.org.apache.servicemix.depends_maven_plugin>1.2</version.org.apache.servicemix.depends_maven_plugin>
@@ -159,22 +149,20 @@
     <version.org.richfaces.bom>4.0.0.Final</version.org.richfaces.bom>
     <version.org.seamframework>3.0.0.Final</version.org.seamframework>
     <version.org.slf4j>1.7.5</version.org.slf4j>
-    <version.org.snmp4j>2.0.3</version.org.snmp4j>
     <version.junit.junit>4.11</version.junit.junit>
     <version.org.mockito>1.9.5</version.org.mockito>
-    <version.org.quartz-scheduler>2.1.6</version.org.quartz-scheduler>
+    <version.org.quartz-scheduler>2.1.7</version.org.quartz-scheduler>
     <version.org.jbehave>3.5.4</version.org.jbehave>
     <version.org.drools>5.3.1.Final</version.org.drools>
     <version.org.eclipse.jetty>8.1.2.v20120308</version.org.eclipse.jetty>
     <version.org.jboss.resteasy>2.3.5.Final</version.org.jboss.resteasy>
     <version.javax.xml.bind>2.2.3</version.javax.xml.bind>
     <version.cglib>2.2.2</version.cglib>
-    <version.com.google.guava>18.0</version.com.google.guava>
+    <version.com.google.guava>14.0.1</version.com.google.guava>
   </properties>
 
   <modules>
     <module>lib</module>
-    <module>extensions</module>
     <module>apps</module>
   </modules>
 
@@ -401,11 +389,6 @@
         <version>${version.org.richfaces.bom}</version>
         <scope>import</scope>
         <type>pom</type>
-      </dependency>
-      <dependency>
-        <groupId>org.snmp4j</groupId>
-        <artifactId>snmp4j</artifactId>
-        <version>${version.org.snmp4j}</version>
       </dependency>
       <dependency>
         <groupId>com.google.guava</groupId>
